force-app/main/default/objects/RH_Excel_Style__mdt/RH_Excel_Style__mdt.object-meta.xml
<CustomObject>
    <label>Excel Style</label>
    <pluralLabel>Excel Styles</pluralLabel>
</CustomObject>