force-app/main/default/objects/RH_Excel_Style__mdt/fields/align__c.field-meta.xml
<CustomField>
    <fullName>align__c</fullName>
    <defaultValue>&apos;left&apos;</defaultValue>
    <label>align</label>
    <length>255</length>
    <type>Text</type>
</CustomField>