force-app/main/default/objects/RH_Excel_Style__mdt/fields/borderColor__c.field-meta.xml
<CustomField>
    <fullName>borderColor__c</fullName>
    <inlineHelpText>in hexademical format</inlineHelpText>
    <label>border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>