force-app/main/default/objects/RH_Excel_Style__mdt/fields/borderStyle__c.field-meta.xml
<CustomField>
    <fullName>borderStyle__c</fullName>
    <defaultValue>&apos;thick&apos;</defaultValue>
    <label>border Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>