force-app/main/default/objects/RH_Excel_Style__mdt/fields/bottomBorderColor__c.field-meta.xml
<CustomField>
    <fullName>bottomBorderColor__c</fullName>
    <label>bottom Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>