force-app/main/default/objects/RH_Excel_Style__mdt/fields/bottomBorderStyle__c.field-meta.xml
<CustomField>
    <fullName>bottomBorderStyle__c</fullName>
    <label>bottom Border Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>