force-app/main/default/objects/RH_Excel_Style__mdt/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>