force-app/main/default/objects/RH_Excel_Style__mdt/fields/fontFamily__c.field-meta.xml
<CustomField>
    <fullName>fontFamily__c</fullName>
    <defaultValue>&apos;Calibri&apos;</defaultValue>
    <label>font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>