force-app/main/default/objects/RH_Excel_Style__mdt/fields/fontSize__c.field-meta.xml
<CustomField>
    <fullName>fontSize__c</fullName>
    <defaultValue>20</defaultValue>
    <label>font Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>