force-app/main/default/objects/RH_Excel_Style__mdt/fields/fontStyle__c.field-meta.xml
<CustomField>
    <fullName>fontStyle__c</fullName>
    <defaultValue>&apos;italic&apos;</defaultValue>
    <label>font Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>