force-app/main/default/objects/RH_Excel_Style__mdt/fields/fontWeight__c.field-meta.xml
<CustomField>
    <fullName>fontWeight__c</fullName>
    <defaultValue>&apos;bold&apos;</defaultValue>
    <label>font Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>