force-app/main/default/objects/RH_Excel_Style__mdt/fields/format__c.field-meta.xml
<CustomField>
    <fullName>format__c</fullName>
    <label>format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>