force-app/main/default/objects/RH_Excel_Style__mdt/fields/leftBorderColor__c.field-meta.xml
<CustomField>
    <fullName>leftBorderColor__c</fullName>
    <label>left Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>