force-app/main/default/objects/RH_Excel_Style__mdt/fields/leftBorderStyle__c.field-meta.xml
<CustomField>
    <fullName>leftBorderStyle__c</fullName>
    <label>left Border Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>