force-app/main/default/objects/RH_Excel_Style__mdt/fields/rightBorderColor__c.field-meta.xml
<CustomField>
    <fullName>rightBorderColor__c</fullName>
    <label>right Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>