force-app/main/default/objects/RH_Excel_Style__mdt/fields/rightBorderStyle__c.field-meta.xml
<CustomField>
    <fullName>rightBorderStyle__c</fullName>
    <label>right Border Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>