force-app/main/default/objects/RH_Excel_Style__mdt/fields/topBorderColor__c.field-meta.xml
<CustomField>
    <fullName>topBorderColor__c</fullName>
    <label>top Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>