force-app/main/default/objects/RH_Excel_Style__mdt/fields/topBorderStyle__c.field-meta.xml
<CustomField>
    <fullName>topBorderStyle__c</fullName>
    <label>top Border Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>