force-app/main/default/objects/RH_Excel_Style__mdt/fields/wrap__c.field-meta.xml
<CustomField>
    <fullName>wrap__c</fullName>
    <defaultValue>true</defaultValue>
    <label>wrap</label>
    <type>Checkbox</type>
</CustomField>